--- a/test/common.extralinguistic.yaml
+++ b/test/common.extralinguistic.yaml
@@ -26,13 +26,14 @@ test:
   - unit: "Université Paris-Sorbonne [(]Paris IV[)] und"
   - unit: "[(]1[)] and [(]2[)]"
   - unit: "number [(]12[)]"
-  - unit: "[3)] closing remarks"
-  - unit: "an [3)] laser light beam"
-  - unit: "[a)]"
-  - unit: "[ix)] [IX)]"
+  - unit: "[3]) closing remarks"
+  - unit: "an [3]) laser light beam"
+  - unit: "[a])"
+  - unit: "[ix]) [IX])"
 
   - unit: "[Parla.cat] és un espai virtual"
   - unit: "a URL can be [https://max:muster@www.example.com:8080/index.html?p1=A&p2=B#ressource] or [mailto:zuhause@aol.com], for instance"
+  - unit: "Ver más en|: [https://www.20minutos.es/noticia/3464606/0/vuelta-puente-vuelos-cancelados-el-prat-atascos/#xtor=AD-15&xts=467263]"
   - unit: "just write to [zuhause@aol.com|+email] or [max.mustermann@gxm.de|+email]!"
   - unit: "[mailto:me@example.com] opens the default email application when clicked on"
   - unit: "[john.smith(comment)@example.com|+email] and [(comment)john.smith@example.com|+email] are both equivalent to [john.smith@example.com|+email]."
