--- a/test/fr.yaml
+++ b/test/fr.yaml
@@ -37,3 +37,5 @@ test:
   - unit: >-
       les [art.] 130|, 196|, [ch.] 3|, [al.] 2|, [let.] e et 196|, [ch.] 14 sont abrogés|;
 
+  - unit: >-
+      [1.2.16] [l']harmonisation avec [l’]expulsion facultative 5408
