--- a/test/rm.yaml
+++ b/test/rm.yaml
@@ -133,3 +133,5 @@ test:
       - »
       - .
 
+  - unit: "Mincha saira van averts ils üschöls d’|üna fanestra d’|ün’|otra chasa da Susch|, ingio cha davo aint as rechatta la fanestra decorada per quel di|."
+
