--- a/test/sv.yaml
+++ b/test/sv.yaml
@@ -25,3 +25,5 @@ test:
   - unit: i [SVT:s] Agenda i kväll
   - unit: Det rankades på [86:e] plats i världen
   - unit: Nyhetsmorgon är [TV4:s] morgonprogram
+  - unit: >-
+      [Inst.] [f.] datalogi
